# ninttp

./: .gitignore  CMakeLists.txt  CMakeOptions.txt  LICENSE  README.md  TODO.md
.github/workflows/: cmake-multi-platform.yml
cmake/: backend_detection.cmake  http_limits_config.cmake  http_method_config.cmake  ninttp-config.cmake.in  ninttp-http-limits-config.hpp.in  ninttp-http-method-config.hpp.in  ninttp-platform-config.hpp.in  utils.cmake  win32.cmake
docs/: socket-contracts.md
examples/: CMakeLists.txt  client_notfound.cpp  http_client.cpp  http_client_v6.cpp  http_server.cpp  http_server_v6.cpp  local_hello_world.cpp  server_notfound.cpp  socket  socket.cpp
include/ninttp/: endpoints.hpp  nin_error.hpp  ninendian.hpp  nintraits.hpp  ninttp.hpp  platform_traits.hpp
include/ninttp/error/: nin_error.hpp
include/ninttp/http/: http.hpp  http_client.hpp  http_limits.hpp  http_method_config.hpp  http_server.hpp  types.hpp
include/ninttp/http/internal/: http_error_factory.hpp  http_parse_error.hpp  http_parser.hpp  http_request_builder.hpp  http_request_parser.hpp  http_response_builder.hpp  http_response_parser.hpp  http_router.hpp  parse_utils.hpp
include/ninttp/socket/: client.hpp  concepts.hpp  endpoints.hpp  errors.hpp  interfaces.hpp  server.hpp  socket.cpp  socket.hpp  socket_error.hpp  socket_error_category.hpp  traits.hpp  types.hpp  utils.hpp
include/ninttp/socket/client/: client_socket.cpp  client_socket.hpp
include/ninttp/socket/error/: socket_error.hpp
include/ninttp/socket/internal/: select_backend.hpp  socket_core.hpp  socket_state.hpp
include/ninttp/socket/internal/backends/: concepts.hpp  posix.hpp  socket_close_status.hpp  socket_option.hpp  winsock.hpp
include/ninttp/socket/server/: server_socket.cpp  server_socket.hpp
tests/: CMakeLists.txt  endpoints_invariant_tests.cpp  http_limits_tests.cpp  http_method_config_tests.cpp  http_request_parser_tests.cpp  http_response_parser_tests.cpp  http_router_tests.cpp  ninendian_edge_tests.cpp  ninendian_tests.cpp  nintraits_edge_tests.cpp  nintraits_tests.cpp  test_check.hpp
